# wordeq_solver

./: .gitignore  Cargo.toml  LICENSE.txt  bacon.toml  rustfmt.toml
results/: benchmark_2_results.txt  benchmark_2_results_2.txt  benchmark_2_results_3.txt  benchmark_2_results_4.txt  benchmark_2_results_5.txt
slurm_scripts/: benchmark1_solver.sh  benchmark_parallelism.sh  benchmark_solver.sh
src/: atomic_bit_set.rs  benchmarks.rs  bit_set_usize.rs  eq.pest  format_duration.rs  formula.rs  lib.rs  main.rs  node_watcher.rs  vec_list.rs
src/formula/: eq_parser.rs
src/search_tree/: assignment_cache.rs  branches.rs  mod.rs  node.rs  solution.rs  splits.rs
tests/: test_solver.rs
