[package]
name = "smt_str_solver"
version = "0.1.0"
edition = "2021"

[features]
trace_logging = []

[dependencies]
anyhow = "1.0.89"
arrayvec = "0.7.6"
bincode = "1.3.3"
bit-set = "0.8.0"
compact_str = { version = "0.8.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display"] }
flexi_logger = { version = "0.29.2", default-features = false }
humantime = "2.1.0"
log = "0.4.22"
nonmax = { version = "0.5.5", features = ["serde"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = "0.6.0"
serde = { version = "1.0.210", features = ["derive"] }
vec_map = { version = "0.8.2", features = ["serde"] }

[profile.release]
codegen-units = 1
lto = "fat"
