[package]
name = "smt_str_solver"
version = "0.1.0"
edition = "2021"
default-run = "smt_str_solver"

[features]
trace_logging = []

[dependencies]
allocator-api2 = { version = "0.2.20", features = ["serde"] }
anyhow = "1.0.89"
arrayvec = { version = "0.7.6", features = ["serde"] }
bincode = "1.3.3"
bit-set = { git = "https://github.com/tage64/bit-set", version = "0.8.0" }
bumpalo = { version = "3.16.0", features = ["std", "allocator-api2"] }
clap = { version = "4.5.20", features = ["derive"] }
comfy-table = "7.1.1"
compact_str = { version = "0.8.0", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["display"] }
flexi_logger = { version = "0.29.2", default-features = false }
log = "0.4.22"
memory-stats = "1.2.0"
nonmax = { version = "0.5.5", features = ["serde"] }
pest = "2.7.14"
pest_derive = "2.7.14"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
rand_xoshiro = "0.6.0"
rustc-hash = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
sync-unsafe-cell = "0.1.1"
vec_map = { git = "https://github.com/tage64/vec-map", features = ["serde"] }
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true

[profile.debug-release]
inherits = "release"
debug = true
strip = false
debug-assertions = false
